<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CommonLib</string>
    <string name="is_for_samsung"></string>
    <!--  -->
    <string name="str_base_64_encoded_public_key"></string>
    <string name="sku_adv"></string>
    <string name="paid_user">Paid user</string>
    <!--  -->
    <string name="pref_feedback">Feedback</string>
    <string name="pref__about">About</string>
    <string name="pref_pay">Pay to remove ads</string>
    <string name="pref_recommend">G apps</string>
    <string name="pref_share">Share</string>
    <string name="pref_about">About</string>
    <string name="email">Email</string>
    <string name="app_info">App Information</string>
    <!--  -->
    <string name="str_thanks_for_feedback">Thanks for your feedback.</string>
    <string name="str_plz_fill_all">Please fill in all the forms.</string>
    <string name="str_restart_app">Thank you for your payment, please restart the app.</string>
    <string name="str_twice_to_exit">Please click BACK again to exit</string>
    <string name="str_thanks">Thank you</string>

</resources>